# pam_tacplus

./: Makefile.am  hello-accounting.c
libtac/lib/: acct_r.c
